--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ button {
 .hero-screen {
   max-width: 1440px;
   padding: 188px 0;
+  margin: 0 auto;
   background-color: var(--primary-dark-color);
   color: var(--primary-background-color);
   text-align: center;
